core/roboconf-core/src/test/resources/configurations/valid/extending-component-with-imported-variables.graph

VM {
	installer: target;
	children: db, server;
}

db {
	exports: ip, port;
}

server {
	imports: db.ip (optional), db.port (optional);
}

my-server {
	extends: server;
	imports: db.ip;	# IP is not optional anymore
}
