core/roboconf-core/src/test/resources/configurations/invalid/graph-with-invalid-import.graph

import it-does-not-exist.graph;

VM {
	installer: target;
}
